Testing HTML & CSS

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title></title>
+    <title>Thuy Nguyen</title>
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,17 +13,21 @@
   </head>
 
   <body>
-    <h1>UCLAx Web Coding Intensive Bootcamp</h1>
+    <h1>UCLAx Web Coding Intensive Bootcamp </h1>
     <h2>Week 1</h2>
-    <img src="images/photo.jpg" alt="This is a photo">
-    <h3>Lorem Ipsum Dolor Sit Amet</h3>
+    <img src="images/thuyphoto.jpg" alt="This is a photo">
+    <h3>Thuy Nguyen - Aspiring UX Designer</h3>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      Hello, my name is <span>Thuy Nguyen</span>. I am an aspiring UX Designer. I am currently enrolled in the UCLAx UX Design Certificate Program. I hope to gain coding knowledge from this class. I am using a Macbook Pro.
     </p>
+    <p>
+      I had a few issues getting my environment up and running. I didn't know what link to install git at first (since there were so many options) so I just chose homebrew. I also ran into a message in my terminal saying that I need to update my shell to zsh. I am still trying to figure out how to update it.
+    </p>
+    <h4><span>My Favorite Websites</span></h4>
     <ul>
-      <li>Lorem ipsum dolor sit amet</li>
-      <li>Consectetur adipiscing elit</li>
-      <li><a href="https://google.com" title="Google.com" target="_blank">Sed do eiusmod tempor</a></li>
+      <li><a href="https://dribbble.com" title="Dribbble.com" target="_blank">Dribbble.com</a></li>
+      <li><a href="https://weather.com" title="Weather.com" target="_blank">Weather.com</a></li>
+      <li><a href="https://asos.com" title="Asos.com" target="_blank">Asos.com</a></li>
     </ul>
   </body>
 
